adjustment new endpoint auth
